fix(cupom): aceita URL do QR Code NFC-e com pipe no NfceReader
URI.create() rejeitava o caracter '|' presente na URL do QR Code NFC-e
(p=chave|versao|tpAmb|cscId|hash), lançando IllegalArgumentException e
fazendo a leitura sempre cair para OCR. Com new URL() a consulta SEFAZ
passa a ser tentada sem erro de construção e o fallback para OCR segue
normal quando o estado não expõe XML estruturado.